Fix issue #5 by adding z-index: 999 attribute to drop down menu

--- a/src/main/webapp/stylesheets/main.css
+++ b/src/main/webapp/stylesheets/main.css
@@ -18,6 +18,7 @@ body {
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 999;
 }
 
 .dropdownoption {
